♻️ refactor: Minor tweaks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 ci:
   autoupdate_schedule: quarterly
-  skip: [poetry-lock, sourcery, pylint, pytest, coverage-badge]
+  skip: ["poetry-lock", "sourcery", "pylint", "pytest", "coverage-badge"]
 
 repos:
   - repo: meta
